--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ log = { version = "0.4.20", features = [] }
 config = "0.14.0"
 dotenv = "0.15.0"
 
-opentelemetry = {version = "0.25.0",features = ["metrics", "logs"] }
+opentelemetry = {version = "0.28.0",features = ["metrics", "logs"] }
 tracing = { version = "0.1.40", features = ["std", "attributes"]}
-tracing-opentelemetry = "0.26.0"
-greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.1.1"}
+tracing-opentelemetry = "0.29.0"
+greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.28.0"}
+#greeting_otel={path= "../greeting_otel", version = "0.28.0"}
