--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ validator = "0.20.0"
 validator_derive = "0.20.0"
 derive_more = { version = "2.0.1", features = ["full"]}
 uuid = { version = "1.16.0", features = ["v7"]}
-rdkafka = { version = "0.37.0", features = ["cmake-build"] }
+rdkafka = { version = "0.37.0" }
 futures = "0.3"
 async-trait = "0.1.77"
 log = { version = "0.4.20", features = [] }
