--- a/kubernetes/greeting-receiver.yaml
+++ b/kubernetes/greeting-receiver.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: greeting-distributor
+    name: greeting-receiver
 spec:
     replicas: 1
     selector:
         matchLabels:
-            app: greeting-distributor
+            app: greeting-receiver
     template:
         metadata:
             labels:
-                app: greeting-distributor
+                app: greeting-receiver
         spec:
             containers:
-                -   name: greeting-distributor
-                    image: arnecdn/greeting-distributor:0.1
+                -   name: greeting-receiver
+                    image: docker.io/arnecdn/greeting-receiver:0.3
                     imagePullPolicy: IfNotPresent
                     resources:
                         requests:
@@ -38,7 +38,7 @@ spec:
                         - name: APP__KAFKA__ENABLE_IDEMPOTENCE
                           value: "true"
                         - name: APP__OTEL_COLLECTOR__OLTP_ENDPOINT
-                          value: "http://my-opentelemetry-collector:4317"
+                          value: "http://grafana-alloy:4317"
                         - name: APP__KUBE__MY_POD_NAME
                           valueFrom:
                             fieldRef:
@@ -52,14 +52,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-    name: greeting-distributor-service
+    name: greeting-receiver-service
 spec:
     ports:
         - port: 8080
           targetPort: 8080
 #          nodePort: 32002
     selector:
-        app: greeting-distributor
+        app: greeting-receiver
     type: LoadBalancer
 #    externalIPs:
 #      - 192.168.64.2
@@ -67,20 +67,20 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: greeting-distributor-ingress
+  name: greeting-receiver-ingress
   annotations:
     nginx.ingress.kubernetes.io/service-upstream: "true"
 spec:
   ingressClassName: nginx
   rules:
-    - host: greeting-distributor.minikube
+    - host: greeting-receiver.minikube
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: greeting-distributor-service
+                name: greeting-receiver-service
                 port:
                   number: 8080
 
@@ -88,11 +88,11 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: greeting-distributor-network-policy
+  name: greeting-receiver-network-policy
 spec:
   podSelector:
     matchLabels:
-      app: greeting-distributor
+      app: greeting-receiver
   policyTypes:
     - Ingress
   ingress:
@@ -104,11 +104,11 @@ spec:
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-    name: greeting-distributor-cpu-scaledobject
+    name: greeting-receiver-cpu-scaledobject
     namespace: default
 spec:
     scaleTargetRef:
-        name: greeting-distributor
+        name: greeting-receiver
     pollingInterval: 10
     cooldownPeriod: 10                               # Optional. Default: 300 seconds
     minReplicaCount: 1
